# dqx

./: .build-constraints.txt  .codegen.json  .gitignore  .zshrc  404.html  AGENTS.md  AGENTS_UPDATE_SKILLS.md  BLOCKER_DECIMAL_CONVERSION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  README_PANDAS_SUPPORT.md  SECURITY.md  ai_explained_anomalies_plan.md  conftest.py  coverage-unit.xml  databricks.yml  demo.ipynb  hatch_build.py  hatch_build_hook.py  index.html  index.md  labs.yml  llms-full.txt  llms.txt  lunr-index-1781567860179.json  lunr-index.json  package-lock.json  pyproject.toml  pytest.ini  search-doc-1781567860179.json  search-doc.json  sitemap.xml  test.py  test_sql_query_optional_merge_columns.py
app/: .build-constraints.txt  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CUSTOMER_QA.md  DEPLOYMENT.md  DESIGN.md  DEVELOPMENT.md  Justfile  README.md  app.yml  components.json  databricks.yml  orval.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  target.dev.yml.example  tsconfig.json  vite.config.ts
app/dashboards/: dqx_quality_overview.lvdash.json
app/scripts/: _align_wheel_version.py  bind_resources.sh  build_app.py  dev.py  post_deploy_grants.sh  seed_demo.py  write_app_yml.py
app/src/databricks_labs_dqx_app/: __init__.py  _metadata.py
app/src/databricks_labs_dqx_app/backend/: CLAUDE.md  _scheduler_registry.py  app.py  builtin_rules_seed.py  cache.py  config.py  dependencies.py  logger.py  lowcode_compile.py  metrics_utils.py  models.py  native_test_predicate.py  pg_cursor_helpers.py  pg_executor.py  profiling_rule_builder.py  registry_fingerprint.py  registry_models.py  registry_seed_map.py  router.py  rule_test_sql.py  run_config_store.py  run_status_manager.py  runtime.py  settings.py  spa_static.py  sql_executor.py  sql_utils.py  storage.py  utils.py
app/src/databricks_labs_dqx_app/backend/common/: approvals.py  authorization.py  permissions.py
app/src/databricks_labs_dqx_app/backend/demo/: __init__.py  datagen.py  manifest.py  redate.py  seed_service.py  status.py
app/src/databricks_labs_dqx_app/backend/migrations/: __init__.py  postgres.py
app/src/databricks_labs_dqx_app/backend/routes/: __init__.py
app/src/databricks_labs_dqx_app/backend/services/: ai_gateway.py  ai_rules_service.py  app_settings_service.py  apply_rules_service.py  binding_run_service.py  comments_service.py  compute_service.py  contract_rules_service.py  data_product_service.py  database_reset_service.py  discovery.py  dq_results_service.py  draft_run_gate_service.py  entitlement_service.py  export_service.py  genie_chat_service.py  genie_space_service.py  job_service.py  materializer.py  metadata_dim_service.py  monitored_table_service.py  monitored_table_versions.py  pending_application_service.py  permissions_service.py  profiling_suggestion_service.py  quarantine_sample_service.py  registry_service.py  review_status_service.py  role_service.py  rule_embeddings.py  rule_retriever.py  rule_suggester.py  rule_test_service.py  rules_catalog_service.py  run_sets.py  schedule_config_service.py  scheduler_service.py  score_cache_service.py  score_service.py  score_view_service.py  (+7 more)
app/src/databricks_labs_dqx_app/ui/: CLAUDE.md  index.html  main.tsx
app/src/databricks_labs_dqx_app/ui/components/: AIAssistantProvider.tsx  AICheckGenerator.tsx  ApprovalStepsBanner.tsx  AuthGuard.tsx  CatalogBrowser.tsx  ColumnDiscoveryPanel.tsx  CommentThread.tsx  DryRunResults.tsx  ExportDialog.tsx  ExportYamlMenu.tsx  HelpTooltip.tsx  Labels.test.ts  Labels.tsx  Pagination.tsx  PreviewDryRunResultPanel.tsx  RegistryRuleBadges.tsx  RegistryRuleFormDialog.tsx  RoleManagement.tsx  RulesReview.tsx  RunReviewStatusPanel.tsx
app/src/databricks_labs_dqx_app/ui/hooks/: use-active-runs.ts  use-ai-availability.ts  use-approvals-mode.ts  use-default-auto-upgrade.ts  use-default-pass-threshold.ts  use-global-results-enabled.ts  use-job-polling.ts  use-monitored-table-run-activity.ts  use-object-permissions.ts  use-pass-threshold-enabled.ts  use-permissions.ts  use-product-run-sets.ts  use-require-draft-run.ts  use-resolved-theme.ts  use-run-failure-toasts.ts  use-suspense-queries.ts  use-unsaved-guard.ts  useJoinedColumns.ts
app/src/databricks_labs_dqx_app/ui/lib/: ai-style.ts  (+38 more)
app/tasks/: dqx_task_runner.py  pyproject.toml
app/tasks/src/dqx_task_runner/: runner.py
app/tests/: conftest.py  test_admin_reset_route.py  test_ai_gateway.py  test_ai_routes.py  test_ai_rules_service.py  test_ai_settings_route.py  test_app_scheduler_lease.py  test_app_settings_service.py  test_apply_rules_service.py  test_approvals_mode.py  test_authorization.py  test_binding_runs.py  test_build_app.py  test_builtin_rules_seed.py  test_cache.py  test_check_functions_routes.py  test_column_reader.py  test_comments_service.py  test_compute_routes.py  test_compute_service.py  test_config.py  test_contract_rules_service.py  test_custom_metrics.py  test_data_products.py  test_data_products_routes.py  test_database_reset_service.py  test_default_pass_threshold.py  test_demo_admin_routes.py  test_demo_cli_smoke.py  test_demo_datagen.py  test_demo_dependencies.py  test_demo_manifest.py  test_demo_redate.py  test_demo_seed_service.py  test_demo_status.py  test_discovery_column_tags.py  test_discovery_governed_tags.py  test_discovery_schema_ddl.py  test_dq_results_route.py  test_dq_results_service.py  (+90 more)
mcp-server/: .gitignore  README.md  app.yaml  app.yml  databricks.yml  deploy.sh  pyproject.toml  requirements.txt
mcp-server/notebooks/: runner.py  setup.py
mcp-server/runner/: pyproject.toml
mcp-server/runner/src/dqx_mcp_runner/: __init__.py  config_compat.py  naming.py  runner.py
mcp-server/scripts/: ci_deploy.sh  ci_destroy.sh  ensure_artifacts_volume.sh
mcp-server/server/: __init__.py  app.py  main.py  tools.py  utils.py
mcp-server/src/dqx_mcp_server/: server.py  test.py
mcp-server/tests/: test_app_http.py  test_cors.py  test_integration_agent.py  test_mcp_protocol.py  test_runner_config_compat.py  test_runner_naming.py  test_tools.py  test_utils.py
(+1767 files in other folders)
