[project]
name = "databricks-labs-dqx-app"
dynamic = ["version"]
description = "App for Data Quality eXtended (DQX), a Python library for data quality monitoring"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.119",
    "pydantic-settings~=2.11",
    "uvicorn~=0.37",
    "databricks-labs-dqx",
    "databricks-sdk~=0.73",
    "databricks-connect~=15.4",
]

[dependency-groups]
dev = [
    "apx",
    "ruff>=0.14.7",
]

[tool.apx.metadata]
app-name = "dqx"
app-slug = "databricks_labs_dqx_app"
app-module = "databricks_labs_dqx_app.backend.app:app"
metadata-path = "src/databricks_labs_dqx_app/_metadata.py"


[tool.uv.sources]
databricks-labs-dqx = { path = "../", editable = true }
apx = { git = "https://github.com/databricks-solutions/apx.git" }  # PyPi package not available yet

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
format-jinja = "{{version}}"

[tool.hatch.build.hooks.version]
path = "src/databricks_labs_dqx_app/_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build]
artifacts = ["src/databricks_labs_dqx_app/__dist__", "src/databricks_labs_dqx_app/_metadata.py"]
exclude = ["src/databricks_labs_dqx_app/ui"]

[tool.ruff]
line-length = 120
target-version = "py311"