[project]
name = "databricks-labs-dqx-app"
dynamic = ["version"]
description = "DQX Studio for Data Quality eXtended (DQX), a Python library for data quality monitoring"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.119",
    "pydantic-settings~=2.11",
    "uvicorn~=0.37",
    "databricks-labs-dqx[llm]",
    "databricks-sdk~=0.73",
    "databricks-sql-connector[pyarrow]==4.2.5",
    "openpyxl>=3.1",
]

[dependency-groups]
dev = [
    "apx",
    "ruff>=0.14.7",
]
test = [
    "pytest~=8.3",
    "pytest-asyncio~=0.24",
    "pytest-cov~=5.0",
    "pytest-mock~=3.14",
    "httpx~=0.28",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::PendingDeprecationWarning",
]

[tool.apx.metadata]
app-name = "DQX Studio"
app-slug = "databricks_labs_dqx_app"
app-module = "databricks_labs_dqx_app.backend.app:app"
metadata-path = "src/databricks_labs_dqx_app/_metadata.py"


[tool.uv]
required-version = "~=0.11.0"
exclude-newer-package = { "databricks-sdk" = false }

[tool.uv.sources]
databricks-labs-dqx = { path = "../", editable = true }
apx = { git = "https://github.com/databricks-solutions/apx.git" }  # PyPi package not available yet

[build-system]
requires = ["hatchling==1.29.0", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
format-jinja = "{{version}}"

[tool.hatch.build.hooks.version]
path = "src/databricks_labs_dqx_app/_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build]
artifacts = ["src/databricks_labs_dqx_app/__dist__", "src/databricks_labs_dqx_app/_metadata.py"]
exclude = ["src/databricks_labs_dqx_app/ui"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.basedpyright]
# ``apx dev check`` runs basedpyright but only syncs the default + dev
# dependency groups, not ``test``. That means pytest (and the rest of the
# test toolchain) is missing from the env basedpyright sees, which blows
# up every ``import pytest`` with reportMissingImports. The mock-heavy
# scheduler service tests also produce noisy reportAttributeAccessIssue
# errors against ``MethodType`` because we monkey-patch service methods
# with ``MagicMock()`` instances — basedpyright can't follow that without
# the test deps and ``spec`` annotations on every mock.
#
# Tests are already type-checked at collection time by ``make app-test``,
# which uses the proper ``--group test`` env, so excluding them from the
# static check here removes the false positives without losing real
# coverage.
exclude = ["tests", "**/.venv", "**/__pycache__", "src/databricks_labs_dqx_app/__dist__"]
