[project]
name = "databricks-labs-dqx-app"
dynamic = ["version"]
description = "DQX Studio for Data Quality eXtended (DQX), a Python library for data quality monitoring"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.119",
    "pydantic-settings~=2.11",
    "uvicorn~=0.37",
    "databricks-labs-dqx[llm]",
    "databricks-sdk~=0.73",
    "databricks-sql-connector[pyarrow]==4.2.5",
    "openpyxl>=3.1",
    # Lakebase (Postgres) backend for OLTP state. ``binary`` ships a
    # pre-built libpq so we don't need a system Postgres install at
    # runtime; ``pool`` adds the threaded ConnectionPool used by
    # PgExecutor.  Both are optional features of the same package.
    "psycopg[binary,pool]>=3.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31",
    "ruff>=0.14.7",
]
test = [
    "pytest~=8.3",
    "pytest-asyncio~=0.24",
    "pytest-cov~=5.0",
    "pytest-mock~=3.14",
    "httpx~=0.28",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::PendingDeprecationWarning",
]

# Single source of truth for app identity. Consumed by:
#   * ``scripts/build_app.py`` — writes a matching ``_metadata.py`` into
#     the wheel so backend code can import these values at runtime.
#   * ``vite.config.ts`` — reads ``app-name`` / ``app-slug`` to wire
#     the UI build output and the dev-server SPA shell.
[tool.dqx_app.metadata]
app-name = "DQX Studio"
app-slug = "databricks_labs_dqx_app"
app-module = "databricks_labs_dqx_app.backend.app:app"


[tool.uv]
required-version = "~=0.11.0"
exclude-newer-package = { "databricks-sdk" = false }

[tool.uv.sources]
databricks-labs-dqx = { path = "../", editable = true }

[build-system]
requires = ["hatchling==1.29.0", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
# Append an optional build tag (set by ``scripts/build_app.py`` to a
# timestamp like ``b20260530t012345``) as an extra PEP 440 local-version
# segment, e.g. ``0.14.0.post42.dev0+abc1234.b20260530t012345``.
# Without the env var (``uv build`` invoked directly during dev) the
# version is unchanged.
#
# The build tag forces every redeploy of the same git commit to produce
# a strictly greater version than the previous deploy, so pip in
# Databricks Apps' persistent venv reinstalls fresh code instead of
# skipping with "already satisfied". Baking the tag in at build
# time (rather than rewriting the wheel filename after the fact)
# ensures the filename and METADATA agree by construction.
format-jinja = "{{ version }}{% if env.get('DQX_APP_BUILD_TAG') %}.{{ env['DQX_APP_BUILD_TAG'] }}{% endif %}"

[tool.hatch.build.hooks.version]
path = "src/databricks_labs_dqx_app/_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build]
artifacts = ["src/databricks_labs_dqx_app/__dist__", "src/databricks_labs_dqx_app/_metadata.py"]
exclude = ["src/databricks_labs_dqx_app/ui"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# ---------------------------------------------------------------------------
# Project-wide policy on broad-except (BLE001).
# ---------------------------------------------------------------------------
# BLE001 ("Do not catch blind exception: ``Exception``") is intentionally
# NOT in the active rule set. Several backend surfaces deliberately catch
# the broad ``Exception`` because best-effort resilience is the contract,
# not a code smell:
#
#   * Lifespan teardown — :meth:`pg_executor.PgExecutor.close` and the
#     ``lifespan`` cleanup branch in ``backend.app``. A close() that
#     raises would leak Postgres connections on every restart flap and
#     could hang the worker indefinitely; the pool is already being torn
#     down so the only meaningful action is "log and move on".
#
#   * Background-thread resilience —
#     :meth:`pg_executor.PgExecutor._token_refresh_loop`. The refresher
#     is a daemon thread that MUST NOT die: if a single SDK / network /
#     OAuth failure killed it, the pool's tokens would silently expire
#     and every subsequent connect would fail with confusing SCRAM
#     errors. The loop logs and backs off instead.
#
#   * Route-level resilience wrappers — endpoints that swallow per-item
#     exceptions so a single bad row doesn't 500 the whole list endpoint
#     (config label-definition migration, optional check-function
#     resolution, etc.).
#
# A narrower catch (e.g. ``(psycopg.Error, OSError)``) cannot cover
# every plausible failure mode at these surfaces. The guarantee we need
# is "this MUST NOT propagate", and that's exactly what ``except
# Exception`` provides.
#
# Convention for any new broad-except site:
#   1. Add an inline comment explaining the resilience contract — why
#      narrowing would re-introduce a real failure mode. If you can't
#      write the comment, you probably shouldn't use the broad catch.
#   2. Do NOT add ``# noqa: BLE001``. Per AGENTS.md rule #6, per-line
#      noqa is the wrong escape hatch.
#   3. If a future change makes BLE001 worth enforcing project-wide,
#      enable it here and add ``[tool.ruff.lint.per-file-ignores]``
#      entries for the resilience files listed above — never per-line
#      noqa.

[tool.basedpyright]
# ``make app-check`` runs basedpyright on a venv synced with only the
# default + dev dependency groups (not ``test``). That means pytest
# and the rest of the test toolchain are missing from the env
# basedpyright sees, which would blow up every ``import pytest`` with
# reportMissingImports. The mock-heavy scheduler service tests also
# produce noisy reportAttributeAccessIssue errors against ``MethodType``
# because we monkey-patch service methods with ``MagicMock()``
# instances — basedpyright can't follow that without the test deps and
# ``spec`` annotations on every mock.
#
# Tests are already type-checked at collection time by ``make app-test``,
# which uses the proper ``--group test`` env, so excluding them from the
# static check here removes the false positives without losing real
# coverage.
exclude = ["tests", "**/.venv", "**/__pycache__", "src/databricks_labs_dqx_app/__dist__"]

# basedpyright defaults to ``recommended`` mode, which enables ~10
# strict-only rules (reportAny, reportExplicitAny,
# reportUnannotatedClassAttribute, reportUnknownMemberType,
# reportUnknownVariableType, reportUnusedCallResult, …). Those rules
# fire on every ``Any``-typed value coming back from FastAPI request
# bodies, SQLAlchemy ORM results, MLflow client calls, and Databricks
# SDK responses — third-party libraries we cannot annotate further —
# and produced ~900 false-positive warnings on this codebase.
#
# The CI ``make app-check`` step trips on those warnings on Linux even
# though ``--level error`` suppresses them locally on macOS, because
# the underlying pyright binary's exit-code semantics for warnings
# differ across platforms. Pinning the mode to ``standard`` (pyright's
# stricter-than-default level) removes the noise everywhere while
# still catching the real type errors we care about (wrong argument
# types, missing returns, undefined names, etc.).
typeCheckingMode = "standard"
