[project]
name = "mcp-dqx"
version = "0.1.0"
description = "DQX MCP Server - AI agent tools for data quality checks"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "mcp[cli]>=1.14.0",
    "uvicorn>=0.34.2",
    "databricks-sdk>=0.60.0",
    "pydantic>=2",
    "fastmcp>=2.12.5",
    "databricks-labs-dqx",
    "databricks-connect~=15.4",
]

[project.scripts]
mcp-dqx = "server.main:main"

# For local development, uncomment the following to use the local DQX source:
# [tool.uv.sources]
# databricks-labs-dqx = { path = "../", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
