[project]
name = "mcp-dqx"
version = "0.1.0"
description = "DQX MCP Server - AI agent tools for data quality checks"
requires-python = ">=3.11"
dependencies = [
    # Runtime deps the server imports directly. Keep in sync with requirements.txt
    # (the manifest the Databricks App installs). mcp/pydantic come in via fastmcp;
    # databricks-labs-dqx is NOT a server dep — only the runner notebook uses it, and
    # it is installed via the job environment spec in databricks.yml.
    "fastmcp>=2.12.5",
    "starlette",
    "uvicorn>=0.34.2",
    "databricks-sdk>=0.60.0",
]

[project.scripts]
mcp-dqx = "server.main:main"

# For local development, uncomment the following to use the local DQX source:
# [tool.uv.sources]
# databricks-labs-dqx = { path = "../", editable = true }

[tool.pytest.ini_options]
markers = [
    "integration: live tests against a deployed MCP server + workspace (skipped unless env is set)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
