[project]
name = "databricks-labs-dqx-task-runner"
version = "0.1.0"
description = "Serverless task runner for DQX Studio — executes profiler and dry-run jobs on Databricks compute"
requires-python = ">=3.11"
dependencies = [
    "databricks-labs-dqx",
    "databricks-sdk~=0.73",
]

[project.scripts]
dqx-task-runner = "dqx_task_runner.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dqx_task_runner"]
