[project]
name = "databricks-labs-dqx-task-runner"
version = "0.1.0"
description = "Serverless task runner for DQX Studio — executes profiler and dry-run jobs on Databricks compute"
requires-python = ">=3.12"
dependencies = [
    # Keep in lockstep with the pin in app/pyproject.toml.
    "databricks-labs-dqx==0.15.0",
    "databricks-sdk~=0.120",
]

[project.scripts]
dqx-task-runner = "dqx_task_runner.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dqx_task_runner"]
