[project]
name = "dqx-mcp-runner"
version = "0.1.0"
description = "Serverless wheel-task runner for the DQX MCP server — executes DQX operations on Databricks compute"
requires-python = ">=3.11"
# databricks-labs-dqx is provided by the sibling wheel listed in the runner job's environment spec
# (databricks.yml); it is declared here (unpinned) so the entry point resolves at build/lint time.
dependencies = [
    "databricks-labs-dqx",
    "databricks-sdk>=0.60.0",
]

[project.scripts]
dqx-mcp-runner = "dqx_mcp_runner.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dqx_mcp_runner"]
